Added Github link

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
  <h1>hi</h1>
+ <footer>This website was coded by Paulina Pogwizd and is <a href="https://github.com/Paupog">open sourced </a> </footer>
 </body>
 </html>
