--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>See Copenhagen</title>
 </head>
 <body>
- <h1>hi</h1>
+ <h1>Welcome to Copenhagen</h1>
+ <h2>Capital of Denmark</h2>
  <footer>This website was coded by Paulina Pogwizd and is <a href="https://github.com/Paupog">open sourced </a> </footer>
 </body>
 </html>
