--- a/index.html
+++ b/index.html
@@ -15,7 +15,43 @@
  <a href="">Learn more</a>
 </div>
 
- <footer>This website was coded by Paulina Pogwizd and is <a href="https://github.com/Paupog">open sourced </a> </footer>
- </div>
+ <footer>
+    <section class="grid">
+    <div>
+    <h3>More about Cph</h3>
+
+    <ul>
+        <li><a href="https://www.cph.dk/en" target="_blank">Copenhagen Airport Map</a></li>
+        <li><a href="https://maps.app.goo.gl/fw2uw34yhhRXYVXn8" target="_blank"> Map of Copenhagen</a></li>
+        <li><a href="https://cphtransitmap.dk/en/" target="_blank">Public transport map </a></li>
+    </ul>
+    </div>
+    <div>
+        <h3>About me</h3>
+        <p>
+          Hi! My name is Paulina and I've been living in Copenhagen for several
+          years. I'm very fond of the city. </br>I created this page as part of a
+          project for SheCodes Responsive to develop my coding skills.
+        </p>
+      </div>
+      <div>
+        <h3>About this website</h3>
+        <p>
+          I created this page as part of a project for SheCodes Responsive
+          to develop my coding skills.
+          <br />
+          This project was coded by Paulina Pogwizd and is
+          <a
+            href="https://github.com/Paupog/copenhagen-project"
+            target="_blank"
+          >
+            open sourced</a
+          >
+        </p>
+      </div>
+    </section>
+ </footer>
+ 
+</div>
 </body>
 </html>
