Main section set

--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
  <h2>Capital of Denmark</h2>
  <a href="">Learn more</a>
 </div>
+<main>
+<section class="grid grid-2-columns">
 
+    <div>
+
+    <img src="src/kopenhaga.jpg" alt="Copenhagen's parlament" class="img-responsive"/>
+    </div>
+    <div>
+    <h1>Why Copenhagen?</h1>
+    <h2>Copenhagen, the city of Spirels</h2>
+    <p> Known as the <strong>City of Spires</strong>, Copenhagen’s skyline is adorned with towers that echo its rich history. From the twisting spire of <strong>Our Saviour’s Church</strong> to the regal green towers of <strong>Rosenborg Castle</strong>, these architectural gems are a testament to the city’s evolution from a Viking fishing village in the 10th century to Denmark’s vibrant capital.  
+         Walking through <strong>Nyhavn</strong>, with its colorful 17th-century houses lining the canals, or climbing the <strong>Round Tower</strong> for sweeping views of terracotta rooftops and the Øresund Strait, you’ll see how history and modernity coexist in harmony.  
+        Beyond its beauty, Copenhagen exudes the Danish spirit of <strong>hygge</strong>—a sense of warmth and coziness found in candlelit cafes, tranquil parks, and the charm of <strong>Tivoli Gardens</strong>. It’s a city that invites you to slow down, explore its timeless streets, and embrace its serene, yet dynamic atmosphere
+        .</p>
+    </div>
+
+</section>
+</main>
  <footer>
-    <section class="grid">
+    <section class="grid grid-3-columns-with-first-narrow">
     <div>
     <h3>More about Cph</h3>
 
