--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
             <h5>Adress</h5>
             <p>Stefansgade 15, 2200 København</p>
             <h5>What I like about it</h5>
-            <p>I like Riccos for its genuine, no-frills dedication to quality coffee. </br>The atmosphere feels authentic and cozy, a true reflection of Copenhagen’s laid-back charm. 
-            </br>The fact that Ricco himself still roasts the beans adds a personal touch that’s hard to find elsewhere, and you can truly taste the passion and craftsmanship in every cup. </p>
+            <p>I like Riccos for its perfect medium boiled eggs. </p>
         </div>
             <div class="card-footer">
             <a href="https://www.riccos.dk/" class="btn">Learn more</a>
@@ -69,7 +68,7 @@
              <h5>Adress</h5>
             <p>Krystalgade 6, København K</p>
             <h5>What I like about it</h5>
-            <p>I love them for its dedication to quality and detail, evident in every perfectly baked loaf and flaky pastry. The warm, inviting atmosphere makes it a perfect spot to escape the hustle and bustle, while the open kitchen adds a personal touch, letting you see the craft behind the food. </p>
+            <p>I love them for its dedication to quality and detail, evident in every perfectly baked loaf and flaky pastry. </p>
         </div>
             <div class="card-footer">
             <a href="https://www.sekscph.com/" class="btn">Learn more</a>
@@ -88,8 +87,8 @@
             <h5>Adress</h5>
             <p>Stefansgade 15, 2200 København</p>
             <h5>What I like about it</h5>
-            <p>I love Next Door Café for its warm, laid-back vibe and how it feels like stepping into a friend's living room. The quirky decor, with mismatched furniture and vintage charm, makes it stand out from other coffee spots.You might also enjoy the friendly service, the feeling of community, and their delicious coffee paired with homemade treats. </p>
-        </div>
+           <p>It's always packed! I love the service, decor, and food. LGBT+ (more than) friendly</p>      
+         </div>
             <div class="card-footer">
             <a href="https://www.riccos.dk/" class="btn">Learn more</a>
         </div>
